<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="com.example.fastcampus.part3.myapplication.IdentityInputActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/enter_yout_identity_verification_information"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:paddingTop="48dp"
            android:paddingBottom="48dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:divider="@drawable/empty_16"
                android:orientation="vertical"
                android:showDividers="middle">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/confirmButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="@{() -> view.onClickDone()}"
                    android:paddingStart="48dp"
                    android:paddingEnd="48dp"
                    android:text="@string/confirm"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneLayout"
                    style="@style/Widget.App.TextInputLayout.Clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneEdit"
                        style="@style/Widget.App.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="11" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/telecomLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telecome"
                        android:textSize="12sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/telecomChipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:chipSpacingHorizontal="8dp"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/sktChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="01"
                            android:text="@string/skt" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/ktChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="02"
                            android:text="@string/kt" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/lgChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="03"
                            android:text="@string/lg" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/CheapSktChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="04"
                            android:text="@string/cheap_skt" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/CheapKtChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="05"
                            android:text="@string/cheap_kt" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/CheapLgChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="06"
                            android:text="@string/cheap_lg" />

                    </com.google.android.material.chip.ChipGroup>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/genderLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="12sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/genderChipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:chipSpacingHorizontal="8dp"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/maleChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="01"
                            android:text="@string/male" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/femaleChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="02"
                            android:text="@string/female" />
                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/birthDayLayout"
                    style="@style/Widget.App.TextInputLayout.Clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthDayEdit"
                        style="@style/Widget.App.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthday"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="8" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLayout"
                    style="@style/Widget.App.TextInputLayout.Clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEdit"
                        style="@style/Widget.App.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:imeOptions="actionNext" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>